# Jarvis-Desktop-AI-Assistant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  codeql.yml
apps/hud/: index.html  package.json
apps/hud/src/: ActionPanel.tsx  App.tsx  BrowserPanel.tsx  DesktopPanel.tsx  MemoryPanel.tsx  PlanPanel.tsx  ReplayPanel.tsx  VoicePanel.tsx  WorkflowPanel.tsx  contracts.ts  demoState.ts  styles.css
apps/hud/src-tauri/: Cargo.toml  tauri.conf.json
apps/hud/src-tauri/src/: main.rs
configs/: policy.default.json
crates/security-bridge/: Cargo.toml
crates/security-bridge/src/: lib.rs
docs/: architecture.md
prompts/claude/: 01-foundation.md  02-capabilities.md  03-voice-and-hud.md  04-memory-and-evals.md
services/orchestrator/: pyproject.toml
services/orchestrator/src/jarvis_core/: __init__.py  __main__.py  api.py  blackboard.py  bridge.py  browser_context.py  cli.py  dev_watch.py  event_log.py  gateway.py  history.py  memory.py  models.py  ocr_providers.py  planner.py  policy.py  reflection.py  reliability.py  subagents.py  supervisor.py  voice.py  voice_providers.py  workflow.py
services/orchestrator/tests/: test_action_loop.py  test_audit_secret.py  test_bridge.py  test_browser_context.py  test_capabilities.py  test_desktop.py  test_history.py  test_memory.py  test_ocr.py  test_planner.py  test_planner_integration.py  test_reliability.py  test_runtime.py  test_screenshots.py  test_voice.py  test_voice_providers.py  test_workflow.py
tasks/: todo.md
(+6 files in other folders)
