[package]
name = "jarvis-hud"
version = "0.1.0"
edition = "2021"
description = "Futuristic guarded-autonomy desktop assistant HUD"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

